--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Abercrombie",
+  "name": "mysite",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,5 +9,18 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1"
-  }
+  },
+  "description": "",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lihanqiang/myapp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lihanqiang/myapp/issues"
+  },
+  "homepage": "https://github.com/lihanqiang/myapp#readme"
 }
