--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
-    "angular": "1.5.9"
+    "angular-ui-router": "^1.0.1",
+    "angular-ui": "^0.4.0",
+    "mobile-angular-ui": "^1.3.4",
+    "angular-material": "^1.1.4",
+    "angular": "1.6.4"
   }
 }
