--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-ui": "^0.4.0",
     "mobile-angular-ui": "^1.3.4",
     "angular-material": "^1.1.4",
-    "angular": "1.6.4"
+    "angular": "1.6.4",
+    "angular-cookie": "^4.1.0"
   }
 }
